tests/baselines/reference/complicatedGenericRecursiveBaseClassReference.errors.txt
tests/cases/compiler/complicatedGenericRecursiveBaseClassReference.ts(1,7): error TS2506: 'S18' is referenced directly or indirectly in its own base expression.
tests/cases/compiler/complicatedGenericRecursiveBaseClassReference.ts(4,2): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/complicatedGenericRecursiveBaseClassReference.ts (2 errors) ====
    class S18<B, A, C> extends S18<A[], { S19: A; (): A }[], C[]>
          ~~~
!!! error TS2506: 'S18' is referenced directly or indirectly in its own base expression.
    {
    }
    (new S18(123)).S18 = 0;
     ~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    